Update metadata and gh pages build

--- a/index.html
+++ b/index.html
@@ -1,10 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta
+      name="description"
+      content="Simple CSV Chart - Upload CSV files to visualize correlations between time series data"
+    />
+    <meta
+      name="keywords"
+      content="csv, chart, data visualization, correlation, time series"
+    />
+    <meta name="author" content="Simple CSV Chart" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Simple CSV Chart" />
+    <meta
+      property="og:description"
+      content="Upload CSV files to visualize correlations between time series data"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Simple CSV Chart" />
+    <meta
+      property="twitter:description"
+      content="Upload CSV files to visualize correlations between time series data"
+    />
+
+    <title>Simple CSV Chart - Data Visualization Tool</title>
   </head>
   <body>
     <div id="root"></div>
