Update name and readme again

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Simple CSV Chart - Upload CSV files to visualize correlations between time series data"
+      content='"Simple" Chart - Upload CSV files to visualize correlations between time series data'
     />
     <meta
       name="keywords"
       content="csv, chart, data visualization, correlation, time series"
     />
-    <meta name="author" content="Simple CSV Chart" />
+    <meta name="author" content='"Simple" Chart' />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Simple CSV Chart" />
+    <meta property="og:title" content='"Simple" Chart' />
     <meta
       property="og:description"
       content="Upload CSV files to visualize correlations between time series data"
@@ -26,13 +26,13 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:title" content="Simple CSV Chart" />
+    <meta property="twitter:title" content='"Simple" Chart' />
     <meta
       property="twitter:description"
       content="Upload CSV files to visualize correlations between time series data"
     />
 
-    <title>Simple CSV Chart - Data Visualization Tool</title>
+    <title>"Simple" Chart - Data Visualization Tool</title>
   </head>
   <body>
     <div id="root"></div>
